--- a/django_cbvs/templates/auth/user_list.html
+++ b/django_cbvs/templates/auth/user_list.html
@@ -5,7 +5,7 @@
 <div class="container">
     {% for user in user_list %}
         <h1>
-            {{ user.first_name }}
+            {{ user.username }}
         </h1>
     {% endfor %}
 </div>
