--- a/django_cbvs/templates/auth/user_detail.html
+++ b/django_cbvs/templates/auth/user_detail.html
@@ -11,7 +11,7 @@
     Is Active:
     <h5>{{ user.is_active }}</h5>
     <br />
-    <a href="{% url 'cvbs:update_user' user.id %}">Update User</a>
+    <a href="{% url 'cbvs:update_user' user.id %}">Update User</a>
 
 </div>
 
