--- a/django_cbvs/templates/auth/user_list.html
+++ b/django_cbvs/templates/auth/user_list.html
@@ -5,7 +5,7 @@
 <div class="container">
     {% for user in user_list %}
         <h1>
-            <a href="{% url 'cvbs:user_detail' user.id %}">{{ user.username }}</a>
+            <a href="{% url 'cbvs:user_detail' user.id %}">{{ user.username }}</a>
         </h1>
     {% endfor %}
 </div>
