--- a/django_cbvs/templates/django_cbvs/info_list.html
+++ b/django_cbvs/templates/django_cbvs/info_list.html
@@ -11,7 +11,7 @@
       title:
       <h5>{{ info.title }}</h5>
       <br />
-      <a href="{% url 'cvbs:update_info' info.id %}">Update Info</a>
+      <a href="{% url 'cbvs:update_info' info.id %}">Update Info</a>
       <a href="{{ info.get_absolute_url }}">Detail</a>
     {% endfor %}
 
